2006-08-03	<carlosc@uvic.ca>

	* marsyas-swig : Version bump (0.3.10)

	* marsyas-swig : Fixed common, ruby, and python files to support
	marsyas namespace in marsyas 0.2.8

	* marsyas-swig/configure : Fixed configure script to (hopefully)
	properly find & use parent files for marsyas.

	* marsyas-swig/README : Added dependencies section.

2006-06-08	<carlosc@uvic.ca>

	* marsyas-swig : Version bump (0.3.8)

	* marsyas-swig/README : Updated to reflect changes in 0.3.7.

2006-06-07	<carlosc@uvic.ca>
	
	* marsyas-swig (update) : Version Bump (0.3.7)
	
	* marsyas-swig/XXX/marsyas-XXX.i : Added target specific typemaps for Repeat class (ruby,python).
	
	* marsyas-swig/common/marsyas.i : Added linkControl, and sequencer based updControl to MarSystem class.
	
	* marsyas-swig : Version bump (0.3.6)
	
	* marsyas-swig/python/Makefile.am : Fixed Python installation to ignore
	--program-prefix on .py files.
	
	* marsyas-swig/README : Removed C++ Rant.

2006-06-03	<carlosc@uvic.ca>

	* marsyas-swig/ruby : Added comment to *.i & *.rb files. Version (0.3.5)

	* configure.ac : Fixed ruby install variables to use prefix.

2006-06-02	<carlosc@uvic.ca>
	
	* marsyas-swig (update) : Added documentation for package. Version (0.3.4)
	
	* marsyas-swig : Version (0.3.3)

	* marsyas-swig/ruby : Moved Ruby specific code to ruby subdir.

	* marsyas-swig/common : Moved common marsyas.i to common subdir.

	* marsyas-swig : Version (0.3.1)
	
	* marsyas-swig/python : Made python version & subdir.

2006-06-01	<carlosc@uvic.ca>
	
	* marsyas-swig : Using autoconf/automake/libtool instead of trying to get mkmf
	to work properly, and now can be build / installed with marsyas. Version (0.2.1)

	* marsyas : Patched configure.in to allow for marsyas-swig as a
	subfolder (swig) to be configured, built and installed as part of
	marsyas.

2006-05-30	<carlosc@uvic.ca>
	
	* marsyas-swig (update) : Completed special Ruby wrapper for *special* features