@@ -1,7 +1,7 @@
 Newest towards the top.
 
 --- 8 / 03 / 06 ---
-After almost two months, I have gotten back to make a few small changes (mostly to compile against marsyas-0.2.8).
+After almost two months, I have gotten back to make a few small changes (mostly to compile against marsyas-0.2.8). See ChangeLog
 
 --- 6 / 08 / 06 ---
 Updated the readme to reflect the changes in package.
